Fix a regression introduced with the yesterday's commit: _first_ need to call setCurrentIndex() and _then_ select().

Now it seems ok.

BUG: 183923



svn path=/trunk/KDE/kdepim/; revision=979514